// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex> renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
  display="flex"
>
  Hello world
</div>
`;

exports[`<Flex> renders with as prop 1`] = `
.c0 {
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<header
  class="c0"
  display="flex"
>
  Hello world
</header>
`;

exports[`<Flex> renders with props 1`] = `
.c0 {
  margin: 8px;
  padding-left: 4px;
  padding-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:576px) {
  .c0 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

<div
  class="c0"
  display="flex"
>
  Hello world
</div>
`;
